moving a couple files

--- a/v1/main.tex
+++ b/v1/main.tex
@@ -1,7 +1,7 @@
 
-\documentclass{sigplanconf}
+\documentclass{../include/sigplanconf}
 
-\usepackage{mathpartir}
+\usepackage{../include/mathpartir}
 \usepackage{framed}
 \usepackage{amsmath, amssymb}
 %%\usepackage{stmaryrd}
